ProfileController.show を OpenAPI Generator で生成したソースコードに移行 (#300)
* test: ProfileController を OpenAPI Generator で生成したコードに移行する際に、テストが落ちるようになるため、削除

* refactor: get /api/profiles/${username} を OpenAPI Generator で生成したコードに移行

* refactor: get /api/profiles/${username} の username が不正だった場合の異常系を、OpenAPI Generator から生成したコードに移行

* feat: ShowProfileUseCase で Username に該当するユーザーが見つからなかったときのエラーハンドリングを追加

* refactor: get /api/profiles/${username} の username に該当するユーザーがいなかった場合の異常系を、OpenAPI Generator から生成したコードに移行

* refactor: get /api/profiles/${username} の不要になった実装を削除

* test: 「正常系-ログイン済で、username で指定した登録済ユーザーが存在する場合、Profile を取得できる。フォロイーの場合、following=trueになる」テストを追加

ログイン状態で、フォロイーの場合、following=true になるか確認するため

* refactor: Username のバリデーションのネストを 1 段階外にだすことで、可読性を向上

* refactor: ProfileRepository.show の第２引数に Option<UserId> = None を追加することで、ログイン時と非ログイン時のメソッドを共通化

* test: 不要になったテスト（UnexpectedError)を削除

* refactor: ProfileRepositoryImpl.show で重複していた処理を共通化することで、冗長なコードを排除

SQL とプレースホルダ以外は全て一緒なので共通化
