# src/main/kotlin/com/example/realworldkotlinspringbootjdbc/presentation/ProfileController.kt
@@ -2,21 +2,25 @@ package com.example.realworldkotlinspringbootjdbc.presentation
 
 import arrow.core.Either.Left
 import arrow.core.Either.Right
-import arrow.core.None
 import arrow.core.Some
+import arrow.core.none
+import arrow.core.toOption
+import com.example.realworldkotlinspringbootjdbc.openapi.generated.controller.ProfileApi
+import com.example.realworldkotlinspringbootjdbc.openapi.generated.model.GenericErrorModel
+import com.example.realworldkotlinspringbootjdbc.openapi.generated.model.GenericErrorModelErrors
+import com.example.realworldkotlinspringbootjdbc.openapi.generated.model.ProfileResponse
 import com.example.realworldkotlinspringbootjdbc.presentation.response.Profile
 import com.example.realworldkotlinspringbootjdbc.presentation.response.serializeUnexpectedErrorForResponseBody
 import com.example.realworldkotlinspringbootjdbc.presentation.shared.AuthorizationError
 import com.example.realworldkotlinspringbootjdbc.usecase.profile.FollowProfileUseCase
 import com.example.realworldkotlinspringbootjdbc.usecase.profile.ShowProfileUseCase
 import com.example.realworldkotlinspringbootjdbc.usecase.profile.UnfollowProfileUseCase
+import com.example.realworldkotlinspringbootjdbc.usecase.shared.RealworldAuthenticationUseCase
 import com.example.realworldkotlinspringbootjdbc.util.MyAuth
-import com.fasterxml.jackson.databind.ObjectMapper
-import com.fasterxml.jackson.databind.SerializationFeature
 import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.DeleteMapping
-import org.springframework.web.bind.annotation.GetMapping
+import org.springframework.web.bind.annotation.ExceptionHandler
 import org.springframework.web.bind.annotation.PostMapping
 import org.springframework.web.bind.annotation.RequestHeader
 import org.springframework.web.bind.annotation.RestController
@@ -25,100 +29,66 @@ import javax.websocket.server.PathParam
 @RestController
 class ProfileController(
     val myAuth: MyAuth,
+    val realworldAuthenticationUseCase: RealworldAuthenticationUseCase,
     val showProfileUseCase: ShowProfileUseCase,
     val followProfileUseCase: FollowProfileUseCase,
     val unfollowProfileUseCase: UnfollowProfileUseCase,
-) {
-    @GetMapping("/profiles/{username}")
-    fun showProfile(
-        @RequestHeader("Authorization") rawAuthorizationHeader: String?,
-        @PathParam("username") username: String?
-    ): ResponseEntity<String> {
-        return when (val authorizeResult = myAuth.authorize(rawAuthorizationHeader)) {
-            /**
-             * JWT 認証 失敗 or 未ログイン
-             */
-            is Left -> when (val result = showProfileUseCase.execute(username, None)) {
-                /**
-                 * プロフィール取得に失敗
-                 */
-                is Left -> when (result.value) {
-                    /**
-                     * 原因: バリデーションエラー
-                     */
-                    is ShowProfileUseCase.Error.InvalidUsername -> ResponseEntity(
-                        serializeUnexpectedErrorForResponseBody("プロフィールが見つかりませんでした"), // TODO: serializeUnexpectedErrorForResponseBodyをやめる
-                        HttpStatus.valueOf(404)
-                    )
-                    /**
-                     * 原因: プロフィールが見つからなかった
-                     */
-                    is ShowProfileUseCase.Error.NotFound -> ResponseEntity(
-                        serializeUnexpectedErrorForResponseBody("プロフィールが見つかりませんでした"), // TODO: serializeUnexpectedErrorForResponseBodyをやめる
-                        HttpStatus.valueOf(404)
-                    )
-                }
-                /**
-                 * プロフィール取得に成功
-                 */
-                is Right -> {
-                    val profile = Profile(
-                        result.value.username.value,
-                        result.value.bio.value,
-                        result.value.image.value,
-                        result.value.following
-                    )
-                    ResponseEntity(
-                        ObjectMapper()
-                            .enable(SerializationFeature.WRAP_ROOT_VALUE)
-                            .writeValueAsString(profile),
-                        HttpStatus.valueOf(200)
-                    )
-                }
+) : ProfileApi {
+    override fun getProfileByUsername(username: String, authorization: String?): ResponseEntity<ProfileResponse> {
+        /**
+         * JWT 認証
+         * - Authorization ヘッダーなし -> none
+         * - Authorization ヘッダーあり、JWT 認証失敗 -> none
+         * - Authorization ヘッダーあり、JWT 認証成功 -> RegisteredUser
+         */
+        val currentUser = authorization.toOption().fold(
+            { none() },
+            {
+                realworldAuthenticationUseCase.execute(it).fold(
+                    { none() },
+                    { result -> Some(result) }
+                )
             }
-            /**
-             * JWT 認証 成功
-             */
-            is Right -> when (val result = showProfileUseCase.execute(username, Some(authorizeResult.value))) {
-                /**
-                 * プロフィール取得に成功
-                 */
-                is Right -> {
-                    val profile = Profile(
-                        result.value.username.value,
-                        result.value.bio.value,
-                        result.value.image.value,
-                        result.value.following
-                    )
-                    ResponseEntity(
-                        ObjectMapper()
-                            .enable(SerializationFeature.WRAP_ROOT_VALUE)
-                            .writeValueAsString(profile),
-                        HttpStatus.valueOf(200)
-                    )
-                }
-                /**
-                 * プロフィール取得に失敗
-                 */
-                is Left -> when (result.value) {
-                    /**
-                     * 原因: バリデーションエラー
-                     */
-                    is ShowProfileUseCase.Error.InvalidUsername -> ResponseEntity(
-                        serializeUnexpectedErrorForResponseBody("プロフィールが見つかりませんでした"), // TODO: serializeUnexpectedErrorForResponseBodyをやめる
-                        HttpStatus.valueOf(404)
-                    )
-                    /**
-                     * 原因: プロフィールが見つからなかった
-                     */
-                    is ShowProfileUseCase.Error.NotFound -> ResponseEntity(
-                        serializeUnexpectedErrorForResponseBody("プロフィールが見つかりませんでした"), // TODO: serializeUnexpectedErrorForResponseBodyをやめる
-                        HttpStatus.valueOf(404)
-                    )
-                }
-            }
-        }
+        )
+
+        val showProfileUseCaseResult = showProfileUseCase.execute(username, currentUser).fold(
+            { throw ShowProfileUseCaseErrorException(it) },
+            { it }
+        )
+
+        return ResponseEntity(
+            ProfileResponse(
+                com.example.realworldkotlinspringbootjdbc.openapi.generated.model.Profile(
+                    username = showProfileUseCaseResult.username.value,
+                    bio = showProfileUseCaseResult.bio.value,
+                    image = showProfileUseCaseResult.image.value,
+                    following = showProfileUseCaseResult.following
+                ),
+            ),
+            HttpStatus.OK
+        )
     }
+
+    data class ShowProfileUseCaseErrorException(val error: ShowProfileUseCase.Error) : Exception()
+
+    @ExceptionHandler(value = [ShowProfileUseCaseErrorException::class])
+    fun onShowProfileUseCaseErrorException(e: ShowProfileUseCaseErrorException): ResponseEntity<GenericErrorModel> =
+        when (val error = e.error) {
+            /**
+             * Username が不正だった場合
+             */
+            is ShowProfileUseCase.Error.InvalidUsername -> ResponseEntity(
+                GenericErrorModel(GenericErrorModelErrors(body = error.errors.map { it.message })),
+                HttpStatus.UNPROCESSABLE_ENTITY
+            )
+            /**
+             * Username に該当する登録済ユーザーが見つからなかった場合
+             */
+            is ShowProfileUseCase.Error.NotFound -> ResponseEntity(
+                GenericErrorModel(GenericErrorModelErrors(body = listOf("プロフィールが見つかりませんでした"))),
+                HttpStatus.NOT_FOUND
+            )
+        }
 
     @PostMapping("/profiles/{username}/follow")
     fun follow(
